--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,6 +1,6 @@
 - @messages.each do |message|
   = message.text
   %br
-  = '-' + message.ip_address + ' @ ' + message.created_at.in_time_zone('Eastern Time (US & Canada)').asctime
+  = '-' + message.location + ' @ ' + message.created_at.in_time_zone('Eastern Time (US & Canada)').asctime
   %br
   %br
